--- a/wiki/MileStones.wiki
+++ b/wiki/MileStones.wiki
@@ -11,5 +11,5 @@ From: 2/20/2010 To: 3/22/2010
 ----
 Id: 2 
 From: 2/20/2010 To: 3/22/2010
-  * To make the *SWEGL* library support _wad_ file format
+  * To make the *Skulls3d* support _wad_ file format
 ----
