Edited wiki page through web user interface.

--- a/wiki/MileStones.wiki
+++ b/wiki/MileStones.wiki
@@ -4,12 +4,7 @@ Here we define the tasks to be implemented followed by their respective deadline
 
 === Details ===
 
-----
-Id: 1 
-From: 2/20/2010 To: 3/22/2010
-  * To convert the *SWEGL*( https://code.google.com/p/swegl/ ) into a library
-----
-Id: 2 
-From: 2/20/2010 To: 3/22/2010
-  * To make the *Skulls3d* support _wad_ file format
-----
+|| *ID* || *Deadline*   || *Contents* || *Status* ||
+||  0   || 2010-02-20   || Project kickoff || Done ||
+||  1   || 2010-03-22   || Convert [https://code.google.com/p/swegl/ swegl] into a library<br /> Make *Skulls3d* import most of the doom .wad file format || In progress ||
+||  2   || 2010-04-19   || Use swegl to render levels <br /> Basic movements and physics || ||
