--- a/wiki/HowToCompile.wiki
+++ b/wiki/HowToCompile.wiki
@@ -2,14 +2,12 @@
 
 You need:
  * The [http://www.libsdl.org/ SDL], as of 2010-02, the latest development version is 1.2.14-VC8 ([http://www.libsdl.org/release/SDL-devel-1.2.14-VC8.zip download]).
- * [http://code.google.com/p/swegl/ swegl], the 3D software renderer.
+ * [http://code.google.com/p/swegl/ swegl], the 3D software renderer. Do not get the latest TRUNK version. You need the branch tagged "v0.0.1"
 
 
 Once downloaded the source tree should look like this:
 {{{
-mycodefolder/skulls3d/DOOM.WAD
-                     /SDL.lib
-                     /Src/main.cpp
+mycodefolder/skulls3d/Src/main.cpp
                          /...
                      /Projects/VC 2008/skulls3d.sln
                                       /...
@@ -22,6 +20,8 @@ mycodefolder/skulls3d/DOOM.WAD
                   /Src/DataClasses
                       /...
 }}}
+
+Then you have to copy your copy DOOM.WAD from your registered copy of DOOM into the folder skulls3d. Copy SDL.dll there too.
 
 You now need to change a user preference in the project. Open skulls3d.sln right-click on the project, open the properties box. Select the configuration "All configurations". Now select Configuration Properties > Debugging. As Working Directory, set "$(ProjectDir)\..\..\" without the quotes. This way, when debugging or running from visual studio, the program runs in the root folder of the project, thus having access to doom.wad and sdl.dll.
 
